--- a/static/css/components/footer.css
+++ b/static/css/components/footer.css
@@ -7,7 +7,7 @@
 	text-align: left; 
 	border-top: 15px solid var(--alert-border);
 	background-color: var(--rev-bg);
-	color: var(--background);
+	color: var(--rev-text);
 	background-size: cover;
 	margin-top: 2em;
 }
